crates/data-dict/tests/snapshots/validate_spec__s12_unquoted_string_example.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: table
    columns:
      - name: zip
        type: string
        examples: ['02134', 94110]
────────────────────────────────────────
error[S12]: Each `examples` value of a `string` column must be a string.
  --> dict.yaml:8:29
   |
LL |   - name: table
LL |     columns:
LL |       - name: zip
LL |         type: string
LL |         examples: ['02134', 94110]
   |                             ^^^^^ is a number
   |
   = help: Quote it to make it a string: `'94110'`.
