crates/data-dict/tests/snapshots/validate_spec__s24_mixed_enum_values.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: table
    columns:
      - name: grade
        type: enum
        values: [1, 2, unknown]
────────────────────────────────────────
error[S24]: An `enum`'s values must all be of the same type.
  --> dict.yaml:8:24
   |
LL |   - name: table
LL |     columns:
LL |       - name: grade
LL |         type: enum
LL |         values: [1, 2, unknown]
   |                        ^^^^^^^ is a string, but the first value is a number
