crates/data-dict/tests/snapshots/validate_spec__s24_null_enum_value.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: table
    columns:
      - name: grade
        type: enum
        values: {pass: Pass, ~: Unknown}
────────────────────────────────────────
error[S24]: An `enum`'s values must be strings.
  --> dict.yaml:8:30
   |
LL |   - name: table
LL |     columns:
LL |       - name: grade
LL |         type: enum
LL |         values: {pass: Pass, ~: Unknown}
   |                              ^ is null
